--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,10 +124,11 @@
             <div class="techniques-container">
                 <!-- partie col menu -->
                 <div class="menu-section">
-                    <div class="main-menu-item active" data-category="reseaux">Réseaux</div>
-                    <div class="main-menu-item" data-category="programmation">Programmation</div>
-                    <div class="main-menu-item" data-category="telecom">Télécommunications</div>
-                    <div class="main-menu-item" data-category="langues">Langues</div>
+                    <div class="main-menu-item active" data-category="Réseaux">Réseaux</div>
+                    <div class="main-menu-item" data-category="Telecommunications">Télécommunications</div>
+                    <div class="main-menu-item" data-category="Programmation">Programmation</div>
+                    <div class="main-menu-item" data-category="Cybersécurité">Cybersécurité</div>
+                    <div class="main-menu-item" data-category="Langues">Langues</div>
                 </div>
                 <div class="skills-section" id="skillsContent">
                     <!-- partie JavaScript -->
@@ -149,9 +150,10 @@
                         { title: "Utilisation de commande et script Linux", content: "Utilisation de commande Linux et de script BASH", level: 70 },
                         { title: "Programmation Python", content: "Fondamentaux de Python", level: 85 },
                         { title: "Développement Web", content: "HTML, CSS.", level: 75 },
+                        { title: "Dévelopement Android" , content: "Java, Android Studio, en cours", level: 0 }
                     ],
                     Cybersécurité: [
-                        { title: "Pentest ", content: "lorem", level: 0 },
+                        { title: "Pentest ", content: "en cours", level: 0 },
                     ],
                     Langues: [
                         { title: "Anglais ", content: "Niveau B2", level: 70 },
@@ -217,7 +219,7 @@
                 });
                 
                 // Initialise l'affichage avec la catégorie "réseaux" par défaut
-                    updateSkillsContent('reseaux');
+                    updateSkillsContent('Réseaux');
                 </script>
 
         <!-- Section Divers et CV -->
