remove all names

--- a/portfolio/projet-integratif/SAE24/avis.html
+++ b/portfolio/projet-integratif/SAE24/avis.html
@@ -42,27 +42,27 @@
     <section class="content">
       <h2>Témoignages</h2>
       <ul>
-      <p>Nous avons eu l’opportunité de collaborer avec des multiples entreprises tels que :</p>  
+      <p>Nous avons eu l’opportunité de collaborer avec plusieurs clients (noms masqués) :</p>  
     </ul>
     </section>
     <br>
       <section class="content">
        <ul>
-        <li>Jean, propriétaire d’un garage automobile, qui après le développement de son activité avait besoin d’une nouvelle installation pour son activité</li>    
+        <li>Un propriétaire d’un garage automobile qui, après le développement de son activité, a eu besoin d’une nouvelle installation réseau.</li>    
         </ul>
         <img src="avisjean.png">
         </section>
         <br>
         <section class="content">
        <ul>
-        <li>Thomas, artisan indépendant à qui a pu trouver une solution simple et efficace pour qu’il puisse exercer sa profession sans problèmes de connexions.</li>    
+        <li>Un artisan indépendant à qui nous avons fourni une solution de connectivité adaptée.</li>    
         </ul>
         <img src="avismarc.png">
         </section>
           <br>
         <section class="content">
        <ul>
-        <li>Nous sommes intervenus dans un atelier mécanique afin d’agrandir l’architecture réseau en ajoutant de nouveaux téléphones fixes et ainsi en équipant tous les bureaux d’ordinateurs. </li>    
+        <li>Intervention réalisée dans un atelier mécanique : agrandissement de l’architecture réseau, ajout de téléphones fixes et équipements informatiques.</li>    
         </ul>
         <img src="avisthomas.png">
         </section>
