--- a/portfolio/projet-integratif/SAE24/mail.html
+++ b/portfolio/projet-integratif/SAE24/mail.html
@@ -15,7 +15,7 @@
   </div>
   <div class="haut">
     <h1>Compte-rendu projet</h1>
-    <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSSAILLY Allan</p>
+    <p>Liste masquée pour la publication en ligne.</p>
   </div>
 </header>
 
@@ -142,8 +142,8 @@
     </section>
     <section class="content">
       <h3>Étape 5 : Coonfiguration Thunderbird </h3>
-      <p>Mail = User@srv-linux.patate.local</p>
-      <p>Mdp = Patate</p>
+      <p>Email = utilisateur@exemple.local (masqué)</p>
+      <p>Mot de passe = (masqué)</p>
     </section>
   </main>
 
