--- a/portfolio/projet-integratif/SAE24/ssh.html
+++ b/portfolio/projet-integratif/SAE24/ssh.html
@@ -16,7 +16,7 @@
     </div>
     <div class="haut">
       <h1>Compte-rendu projet</h1>
-      <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIEGE Tom - ASSSAILLY Allan</p>
+      <p>Liste masquée pour la publication en ligne.</p>
     </div>
   </header>
 
@@ -108,11 +108,8 @@
     <br>
     <section class="content">
       <h3>2ème étape : test</h3>
-      <p>Après avoir installé le service SSH, on teste si l’on peut se connecter au serveur via un autre appareil. Pour cela, on tape sur un autre PC du réseau avec la commande :</p>
-      <p>ssh -p 2222 rh@172.25.0.135</p>
-      <p><strong>rh</strong> = le nom d’utilisateur</p>
-      <p><strong>172.25.0.135</strong> = adresse sur laquelle on se connecte (port du routeur qui fait le NAT)</p>
-      <p><strong>-p 2222</strong> = le port sur lequel on se connecte sur le routeur (le port 22 ne fonctionne pas)</p>
+      <p>Après avoir installé le service SSH, on teste si l’on peut se connecter au serveur via un autre appareil. Exemple de commande (utilisateur masqué) :</p>
+      <p><code>ssh -p 2222 user@172.25.0.135</code></p>
     </section>
   </main>
 
