--- a/portfolio/projet-integratif/index.html
+++ b/portfolio/projet-integratif/index.html
@@ -52,7 +52,10 @@
   </div>
   <br>
   <br>
-  <p> Pour accéder au compte-rendu, il faut se connecter sur le site Réseaux & CO </p>
+  <section id="membres">
+    <h2>Membres du groupe</h2>
+    <p>Liste masquée pour la publication en ligne.</p>
+  </section>
   <br>
 </body>
 </html>
