--- a/portfolio/projet-integratif/SAE24/config.html
+++ b/portfolio/projet-integratif/SAE24/config.html
@@ -16,7 +16,7 @@
     </div>
     <div class="haut">
       <h1>Compte-rendu projet</h1>
-      <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSSAILLY Allan</p>
+      <p>Liste masquée pour la publication en ligne.</p>
     </div>
   </header>
 
