--- a/ngo/index.html
+++ b/ngo/index.html
@@ -1,1 +1,19 @@
-a
+--- index.html ---
+
+<!DOCTYPE html><html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Needy Girl Overdose – Countdown</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="hud">
+    <div class="hud-inner" id="hudBox">
+      <h1>Needy Girl Overdose dans :</h1>
+      <div id="timer">Chargement…</div>
+      <div class="hint">Appuie sur <strong>Entrée</strong> ou <strong>tape l'écran</strong></div>
+    </div>
+  </div>  <img id="dvd" class="bouncer" src="image1.jpg" />  <script src="script.js"></script></body>
+</html>
