--- a/ngo/index.html
+++ b/ngo/index.html
@@ -14,5 +14,6 @@
       <div id="timer">Chargement…</div>
       <div class="hint">Appuie sur <strong>Entrée</strong> ou <strong>tape l'écran</strong></div>
     </div>
-  </div>  <img id="dvd" class="bouncer" src="image1.jpg" />  <script src="script.js"></script></body>
+  </div>  
+<img id="dvd" class="bouncer" src="image1.jpg" />  <script src="script.js"></script></body>
 </html>
