--- a/cleaner/index.html
+++ b/cleaner/index.html
@@ -5,7 +5,7 @@
 <meta name="robots" content="noindex, nofollow">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nettoyeur de texte avancé</title>
+<title>Nettoyeur de texte v3 </title>
 <style>
   body { font-family: sans-serif; padding: 20px; background: #f5f5f5; }
   textarea { width: 100%; min-height: 100px; margin-bottom: 10px; padding: 10px; font-size: 1rem; white-space: pre-wrap; }
