--- a/ngo/index.html
+++ b/ngo/index.html
@@ -89,30 +89,148 @@
     setInterval(updateTimer, 1000);
     updateTimer();
 
-    // DVD BOUNCER
-    const dvd = document.getElementById("dvd");
-    let x = 100, y = 100;
-    let dx = 3, dy = 3;
-    let angle = 0;
+const SPRITES = ["image1.jpg"];
 
-    function animate() {
-      const screenWidth = innerWidth;
-      const screenHeight = innerHeight;
-      const w = dvd.offsetWidth;
-      const h = dvd.offsetHeight;
+    function viewportSize() {
+      return { w: window.innerWidth, h: window.innerHeight };
+    }
+    function hudRect() {
+      return document.getElementById("hudBox").getBoundingClientRect();
+    }
+    function rand(min, max) { return Math.random() * (max - min) + min; }
 
-      x += dx;
-      y += dy;
+    function createBouncer(src, x, y) {
+      const el = new Image();
+      el.src = src;
+      el.className = "bouncer";
+      document.body.appendChild(el);
 
-      if (x <= 0 || x + w >= screenWidth) dx *= -1;
-      if (y <= 0 || y + h >= screenHeight) dy *= -1;
+      const speed = rand(2, 4);
+      const angle = rand(0, Math.PI * 2);
 
-      angle += 5;
-      dvd.style.transform = `translate(${x}px, ${y}px) rotateY(${angle}deg)`;
+      const b = {
+        el,
+        x: x ?? rand(0, window.innerWidth - 120),
+        y: y ?? rand(0, window.innerHeight - 120),
+        dx: Math.cos(angle) * speed,
+        dy: Math.sin(angle) * speed,
+        rotY: rand(0, 360),
+        rotZ: rand(0, 360),
+        w: 100,
+        h: 100
+      };
 
-      requestAnimationFrame(animate);
+      el.onload = () => {
+        b.w = el.width || b.w;
+        b.h = el.height || b.h;
+      };
+
+      placeOutsideHud(b);
+      return b;
     }
 
+    function placeOutsideHud(b) {
+      const { w: W, h: H } = viewportSize();
+      const hud = hudRect();
+      const overlapsHud =
+        b.x < hud.right && b.x + b.w > hud.left &&
+        b.y < hud.bottom && b.y + b.h > hud.top;
+      if (overlapsHud) {
+        b.y = hud.bottom + 10;
+      }
+      if (b.x < 0) b.x = 0;
+      if (b.y < 0) b.y = 0;
+      if (b.x + b.w > W) b.x = W - b.w;
+      if (b.y + b.h > H) b.y = H - b.h;
+    }
+
+    const bouncers = [
+      createBouncer(SPRITES[0]),
+      createBouncer(SPRITES[1])
+    ];
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        const src = SPRITES[Math.floor(Math.random() * SPRITES.length)];
+        bouncers.push(createBouncer(src));
+      }
+    });
+
+    document.addEventListener('pointerdown', (e) => {
+      const src = SPRITES[Math.floor(Math.random() * SPRITES.length)];
+      const b = createBouncer(src, e.clientX, e.clientY);
+      placeOutsideHud(b);
+      bouncers.push(b);
+    });
+
+    function handleCollisions() {
+      for (let i = 0; i < bouncers.length; i++) {
+        const a = bouncers[i];
+        for (let j = i + 1; j < bouncers.length; j++) {
+          const c = bouncers[j];
+          if (a.x < c.x + c.w && a.x + a.w > c.x &&
+              a.y < c.y + c.h && a.y + a.h > c.y) {
+            const overlapX = Math.min(a.x + a.w, c.x + c.w) - Math.max(a.x, c.x);
+            const overlapY = Math.min(a.y + a.h, c.y + c.h) - Math.max(a.y, c.y);
+            if (overlapX < overlapY) {
+              const push = overlapX / 2;
+              if (a.x < c.x) { a.x -= push; c.x += push; }
+              else { a.x += push; c.x -= push; }
+              a.dx *= -1; c.dx *= -1;
+            } else {
+              const push = overlapY / 2;
+              if (a.y < c.y) { a.y -= push; c.y += push; }
+              else { a.y += push; c.y -= push; }
+              a.dy *= -1; c.dy *= -1;
+            }
+          }
+        }
+      }
+    }
+
+    function keepInBounds(b) {
+      const { w: W, h: H } = viewportSize();
+      const hud = hudRect();
+
+      if (b.x <= 0 || b.x + b.w >= W) b.dx *= -1;
+      if (b.y <= 0 || b.y + b.h >= H) b.dy *= -1;
+
+      const hitsHud =
+        b.x < hud.right && b.x + b.w > hud.left &&
+        b.y < hud.bottom && b.y + b.h > hud.top;
+      if (hitsHud) {
+        if (Math.abs(b.dx) > Math.abs(b.dy)) {
+          if (b.x < hud.left) b.x = hud.left - b.w - 2;
+          else b.x = hud.right + 2;
+          b.dx *= -1;
+        } else {
+          if (b.y < hud.top) b.y = hud.top - b.h - 2;
+          else b.y = hud.bottom + 2;
+          b.dy *= -1;
+        }
+      }
+    }
+
+    function animate() {
+      for (const b of bouncers) {
+        b.w = b.el.offsetWidth || b.w;
+        b.h = b.el.offsetHeight || b.h;
+        b.x += b.dx;
+        b.y += b.dy;
+        keepInBounds(b);
+
+        b.rotY = (b.rotY + 5) % 360;
+        b.rotZ = (b.rotZ + 2) % 360;
+        b.el.style.transform = `translate(${b.x}px, ${b.y}px) rotateY(${b.rotY}deg) rotateZ(${b.rotZ}deg)`;
+      }
+      handleCollisions();
+      requestAnimationFrame(animate);
+    }
     animate();
-  </script></body>
+
+    window.addEventListener('resize', () => {
+      for (const b of bouncers) placeOutsideHud(b);
+    });
+  </script>
+</body>
 </html>
