--- a/fate/index.html
+++ b/fate/index.html
@@ -214,7 +214,7 @@
     updateTimer();
 
     // ===== Bouncers =====
-    const SPRITES = ["image1.jpg", "mdrrrrrr2.png", "mdrrrr.png"];
+    const SPRITES = ["image1.jpg", "mdrrrrrr2.png", "mdrrrr.png","clown.png"];
 
     function viewportSize() {
       return { w: window.innerWidth, h: window.innerHeight };
