--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
                 <div class="text-area">
                     <h2>Je suis Melchior HADROT</h2>
                     <p>
-                        J'ai 19 ans et je suis étudiant en première année de BUT Réseaux et Télécommunications spécialité Cybersécurité à l'IUT
+                        J'ai 19 ans et je suis <strong>étudiant en seconde année de BUT Réseaux et Télécommunications</strong> spécialité Cybersécurité à l'IUT
                         Clermont Auvergne d'Aubière.
                         Passionné par la technologie, j'aime explorer des domaines variés comme la programmation,
                         l'impression et la modélisation 3D, ainsi que l'électronique.
@@ -102,9 +102,9 @@
                     <p>Je sais travailler efficacement en équipe et communiquer avec mes collègues</p>
                 </div>
                 <div class="skill-box">
-                    <h3>Débrouillard</h3>
-                    <img src="assets/image/icon/gear5000x5000.png" alt="Débrouillard" class="skill-icon" width="60" height="60">
-                    <p>Je m'adapte rapidement aux nouvelles situations et trouve des solutions créatives</p>
+                    <h3>Ingénieux</h3>
+                    <img src="assets/image/icon/gear5000x5000.png" alt="Ingénieux" class="skill-icon" width="60" height="60">
+                    <p>Je m'adapte rapidement aux nouvelles situations et trouve des solutions adaptées</p>
                 </div>
                 <div class="skill-box">
                     <h3>Pédagogue</h3>
