--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,6 +54,37 @@
                         Je suis à la recherche du stage obligatoire de 2ème année, qui se déroulera du 7 avril au 12 juin 2025 inclus.
                     </p>
                 </div>
+                <script>
+                // Synchronize carousels by tab (IUT/Personnels)
+                document.querySelectorAll('.proj-tab').forEach(tab => {
+                    tab.addEventListener('click', function() {
+                        // Remove active from all tabs
+                        document.querySelectorAll('.proj-tab').forEach(t => t.classList.remove('active'));
+                        this.classList.add('active');
+                        const type = this.getAttribute('data-tab');
+                        // For each year carousel, show only the correct type placeholder
+                        document.querySelectorAll('.projects-carousel').forEach(carousel => {
+                            carousel.querySelectorAll('.carousel-item').forEach(item => {
+                                if(item.getAttribute('data-type') === type) {
+                                    item.style.display = '';
+                                } else {
+                                    item.style.display = 'none';
+                                }
+                            });
+                        });
+                    });
+                });
+                // Initialize to show IUT by default
+                document.querySelectorAll('.projects-carousel').forEach(carousel => {
+                    carousel.querySelectorAll('.carousel-item').forEach(item => {
+                        if(item.getAttribute('data-type') === 'iut') {
+                            item.style.display = '';
+                        } else {
+                            item.style.display = 'none';
+                        }
+                    });
+                });
+                </script>
                 <div class = "tete">
                     <img src="assets/image/icon/pfp.png" alt="Ma photo" width="400" height="550">
                 </div>
@@ -250,6 +281,13 @@
                                 </div>
                                 <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
                             </div>
+                                 <div class="divers-box">
+                                <div>
+                                    <h3>Électronique</h3>
+                                    <p>Conception et réalisation de projets électroniques</p>
+                                </div>
+                                <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                            </div>
                                                                                  
                         </div>
                     </div>
@@ -261,13 +299,113 @@
                         <button class="proj-tab active" data-tab="iut">Projets IUT</button>
                         <button class="proj-tab" data-tab="perso">Projets Personnels</button>
                     </div>
-                    <!-- Section du carrousel -->
-                    <div class="projects-carousel">
-                        <button class="carousel-button prev">&lt;</button>
-                        <div class="carousel-container">
-                            <div class="carousel-wrapper"></div>
+                    <!-- Trois carrousels synchronisés par année -->
+                    <div class="projects-years">
+                        <div class="projects-year-block">
+                            <h2>2024</h2>
+                            <div class="projects-carousel" data-year="2024">
+                                <button class="carousel-button prev">⇦</button>
+                                <div class="carousel-container">
+                                    <div class="carousel-wrapper">
+                                        <div class="carousel-item placeholder" data-type="iut">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet IUT 2024</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2024" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet Perso 2024</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2024" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-button next">⇨</button>
+                            </div>
                         </div>
-                        <button class="carousel-button next">&gt;</button>
+                        <div class="projects-year-block">
+                            <h2>2025</h2>
+                            <div class="projects-carousel" data-year="2025">
+                                <button class="carousel-button prev">⇦</button>
+                                <div class="carousel-container">
+                                    <div class="carousel-wrapper">
+                                        <div class="carousel-item placeholder" data-type="iut">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet IUT 2025</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2025" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet Perso 2025</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2025" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-button next">⇨</button>
+                            </div>
+                        </div>
+                        <div class="projects-year-block">
+                            <h2>2026</h2>
+                            <div class="projects-carousel" data-year="2026">
+                                <button class="carousel-button prev">⇦</button>
+                                <div class="carousel-container">
+                                    <div class="carousel-wrapper">
+                                        <div class="carousel-item placeholder" data-type="iut">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet IUT 2026</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2026" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
+                                            <div class="project-content">
+                                                <div class="project-info">
+                                                    <h2>Projet Perso 2026</h2>
+                                                    <p>À venir</p>
+                                                    <button class="projet-button" disabled>À venir</button>
+                                                </div>
+                                                <div class="project-image">
+                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2026" class="projet-icon" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-button next">⇨</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
