--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
                         Clermont Auvergne d'Aubière.
                         Passionné par la technologie, j'aime explorer des domaines variés comme la programmation,
                         l'impression et la modélisation 3D, ainsi que l'électronique.
-                        Je suis à la recherche du stage obligatoire de 2ème année, qui se déroulera du 7 avril au 12 juin 2025 inclus.
+                        Je suis à la recherche du stage obligatoire de 2ème année, qui se déroulera du 7 avril au 12 juin 2026 inclus.
                     </p>
                 </div>
                 <script>
@@ -301,107 +301,32 @@
                     </div>
                     <!-- Trois carrousels synchronisés par année -->
                     <div class="projects-years">
-                        <div class="projects-year-block">
+                        <div class="projects-year-block" data-year="2024">
                             <h2>2024</h2>
                             <div class="projects-carousel" data-year="2024">
                                 <button class="carousel-button prev">⇦</button>
                                 <div class="carousel-container">
-                                    <div class="carousel-wrapper">
-                                        <div class="carousel-item placeholder" data-type="iut">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet IUT 2024</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2024" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet Perso 2024</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2024" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="carousel-wrapper"></div>
                                 </div>
                                 <button class="carousel-button next">⇨</button>
                             </div>
                         </div>
-                        <div class="projects-year-block">
+                        <div class="projects-year-block" data-year="2025">
                             <h2>2025</h2>
                             <div class="projects-carousel" data-year="2025">
                                 <button class="carousel-button prev">⇦</button>
                                 <div class="carousel-container">
-                                    <div class="carousel-wrapper">
-                                        <div class="carousel-item placeholder" data-type="iut">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet IUT 2025</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2025" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet Perso 2025</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2025" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="carousel-wrapper"></div>
                                 </div>
                                 <button class="carousel-button next">⇨</button>
                             </div>
                         </div>
-                        <div class="projects-year-block">
+                        <div class="projects-year-block" data-year="2026">
                             <h2>2026</h2>
                             <div class="projects-carousel" data-year="2026">
                                 <button class="carousel-button prev">⇦</button>
                                 <div class="carousel-container">
-                                    <div class="carousel-wrapper">
-                                        <div class="carousel-item placeholder" data-type="iut">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet IUT 2026</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder IUT 2026" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item placeholder" data-type="perso" style="display:none;">
-                                            <div class="project-content">
-                                                <div class="project-info">
-                                                    <h2>Projet Perso 2026</h2>
-                                                    <p>À venir</p>
-                                                    <button class="projet-button" disabled>À venir</button>
-                                                </div>
-                                                <div class="project-image">
-                                                    <img src="/portfolio/assets/image/icon/placeholder.png" alt="Placeholder Perso 2026" class="projet-icon" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="carousel-wrapper"></div>
                                 </div>
                                 <button class="carousel-button next">⇨</button>
                             </div>
