--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -286,7 +286,7 @@
                                     <h3>Électronique</h3>
                                     <p>Conception et réalisation de projets électroniques</p>
                                 </div>
-                                <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                                <img src="assets/image/icon/ecranesp32.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
                             </div>
                                                                                  
                         </div>
