--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,16 +42,19 @@
 
         <!-- À propos de moi -->
         <div class="content">
-            <h1 id="aPropos">A propos de moi</h1>
+            <h1 id="aPropos">À propos de moi</h1>
             <div class="about-container">
-                <div class="text-area">
+                <div class="text-area" style="text-align: justify;">
                     <h2>Je suis Melchior HADROT</h2>
                     <p>
                         J'ai 19 ans et je suis <strong>étudiant en seconde année de BUT Réseaux et Télécommunications</strong> spécialité Cybersécurité à l'IUT
                         Clermont Auvergne d'Aubière.
                         Passionné par la technologie, j'aime explorer des domaines variés comme la programmation,
                         l'impression et la modélisation 3D, ainsi que l'électronique.
-                        Je suis à la recherche du stage obligatoire de 2ème année, qui se déroulera du 7 avril au 12 juin 2026 inclus.
+                    <p>
+                        <br>Je suis à la recherche du stage obligatoire de 2ème année, qui se déroulera du 7 avril au 12 juin 2026 inclus.
+                    </p>
+
                     </p>
                 </div>
                 <script>
@@ -92,7 +95,7 @@
         </div>
 
         <div id="formation" class="content">
-            <h1><br><br>Mes formations</h1>
+            <h1>Mes formations</h1>
             <div class="container">
                 <div class="text-area">
                     <p>
@@ -185,6 +188,7 @@
                     ],
                     Cybersécurité: [
                         { title: "Pentest ", content: "en cours", level: 0 },
+                        { title: "Concevoir un réseau informatique sécurisé multi-sites", content: "en cours", level: 0 }
                     ],
                     Langues: [
                         { title: "Anglais ", content: "Niveau B2", level: 70 },
@@ -255,42 +259,7 @@
 
         <!-- Section Divers et CV -->
             <div>
-                    <!-- Section Divers -->
-                    <div id="divers" class="content">
-                        <h1>Divers</h1>
-                        <div class="divers-container">
-                            <div class="divers-box">
-                                <div>
-                                    <h3>Lecture</h3>
-                                    <p>Passionné par les œuvres de science-fiction et les mangas.</p>
-                                </div>
-                                <img src="assets/image/icon/1984.jpg" alt="Placeholder Image" class="divers-icon" width="90" height="160" />
-                                <img src="assets/image/icon/berserk.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
-                            </div>
-                            <div class="divers-box">
-                                <div>
-                                    <h3>Cuisine</h3>
-                                    <p>Préparation régulière de plats et pâtisseries pour ma famille.</p>
-                                </div>
-                                <img src="assets/image/icon/cuisine.png" alt="Placeholder Image" class="divers-icon" width="250" height="160" />
-                            </div>
-                            <div class="divers-box">
-                                <div>
-                                    <h3>Impression 3D</h3>
-                                    <p>Modélisation et impression 3D</p>
-                                </div>
-                                <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
-                            </div>
-                                 <div class="divers-box">
-                                <div>
-                                    <h3>Électronique</h3>
-                                    <p>Conception et réalisation de projets électroniques</p>
-                                </div>
-                                <img src="assets/image/icon/ecranesp32.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
-                            </div>
-                                                                                 
-                        </div>
-                    </div>
+                    <!-- Section Divers déplacée après Projets -->
                 <!-- Section Projets -->
                 <div id="mesProjets" class="content">
                     <h1>Projets</h1>
@@ -331,6 +300,42 @@
                                 </div>
                                 <button class="carousel-button next">⇨</button>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Section Divers déplacée ici -->
+                <div id="divers" class="content">
+                    <h1>Divers</h1>
+                    <div class="divers-container">
+                        <div class="divers-box">
+                            <div>
+                                <h3>Lecture</h3>
+                                <p>Passionné par les œuvres de science-fiction et les mangas.</p>
+                            </div>
+                            <img src="assets/image/icon/1984.jpg" alt="Placeholder Image" class="divers-icon" width="90" height="160" />
+                            <img src="assets/image/icon/berserk.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                        </div>
+                        <div class="divers-box">
+                            <div>
+                                <h3>Cuisine</h3>
+                                <p>Préparation régulière de plats et pâtisseries pour ma famille.</p>
+                            </div>
+                            <img src="assets/image/icon/cuisine.png" alt="Placeholder Image" class="divers-icon" width="250" height="160" />
+                        </div>
+                        <div class="divers-box">
+                            <div>
+                                <h3>Impression 3D</h3>
+                                <p>Modélisation et impression 3D</p>
+                            </div>
+                            <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                        </div>
+                        <div class="divers-box">
+                            <div>
+                                <h3>Électronique</h3>
+                                <p>Conception et réalisation de projets électroniques</p>
+                            </div>
+                            <img src="assets/image/icon/ecranesp32.jpg" alt="Placeholder Image" class="divers-icon" width="190" height="160" />
                         </div>
                     </div>
                 </div>
