--- a/c/index.html
+++ b/c/index.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MeowCAD Solver</title>
+    <title>c</title>
 </head>
 
 <body>
+    <a href="https://ent.uca.fr" target="_blank">ent</a><br>
+    <br>
+    <br>
+    <a href="https://www.netacad.com/launch?id=cd185ce7-7677-49b8-a18d-fe807848f78d&tab=curriculum&view=52459109-1d2b-4fbb-afb9-6d91fda1d15f"
+        target="_blank">netacad</a><br>
+    <br>
+    <br>
     <a href="https://chromewebstore.google.com/detail/meowcad-solver/ngkonaonfgfbnobbacojipgndihanmca"
         target="_blank">Chrome</a><br>
     <a href="https://addons.mozilla.org/en-US/firefox/addon/meowcad-solver/" target="_blank">Firefox</a><br>
