--- a/c/index.html
+++ b/c/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>c</title>
+    <meta name="robots" content="noindex, nofollow">
 </head>
 
 <body>
     <a href="https://ent.uca.fr" target="_blank">ent</a><br>
+    
     <br>
     <br>
     <a href="https://www.netacad.com/launch?id=cd185ce7-7677-49b8-a18d-fe807848f78d&tab=curriculum&view=52459109-1d2b-4fbb-afb9-6d91fda1d15f"
