--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -266,8 +266,7 @@
                     <!-- Onglets de catégories -->
                     <div class="projects-tabs">
                         <button class="proj-tab active" data-tab="iut">Projets IUT</button>
-                        <!-- Bouton Projets Personnels désactivé : masqué volontairement car les projets personnels n'ont pas de bouton d'accès. Voir la logique côté `carousel.js`. -->
-                        <!-- <button class="proj-tab" data-tab="perso">Projets Personnels</button> -->
+                        <button class="proj-tab" data-tab="perso">Projets Personnels</button>
                     </div>
                     <!-- Trois carrousels synchronisés par année -->
                     <div class="projects-years">
