--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
         <!-- Bannière fixe -->
         <div class="banner">
             <img src="/portfolio/assets/image/icon/hamburger1000x1000.png" alt="Menu" width="40px" onclick="openNav()">
-            <h1>Portfolio</h1>
+            <h1>Portfolio - Stage du 7 avril au 12 juin 2026 </h1>
         </div>
 
         <!-- Menu latéral -->
