--- a/portfolio/projet-integratif/SAE24/avis.html
+++ b/portfolio/projet-integratif/SAE24/avis.html
@@ -35,7 +35,7 @@
       <ul>
       <li>EC Auto</li>
       <img src="client.png">
-      <a href="..\client\index.html" class="lien">Cliquez sur le lien pour accéder au site du partenaire</a>
+      <a href="../client/index.html" class="lien">Cliquez sur le lien pour accéder au site du partenaire</a>
       </ul>
     </section>
     <br>
