--- a/portfolio/projet-integratif/client/activitean.html
+++ b/portfolio/projet-integratif/client/activitean.html
@@ -68,7 +68,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 - Réseaux & CO. All rights reserved.</p>
+    <p>&copy; 2025 - EC AUTO. All rights reserved.</p>
   </footer>
 
 </body>
