--- a/portfolio/projet-integratif/client/partenaire.html
+++ b/portfolio/projet-integratif/client/partenaire.html
@@ -43,7 +43,7 @@
         </ul>
     <img src="logo.png">
     <br>
-    <a href="..\SAE24\index.html" class="lien">Cliquez sur le lien pour accéder au site du partenaire</a>
+    <a href="../SAE24/index.html" class="lien">Cliquez sur le lien pour accéder au site du partenaire</a>
     </section>
     <br>
     <section class="content">
