--- a/portfolio/projet-integratif/client/partenairean.html
+++ b/portfolio/projet-integratif/client/partenairean.html
@@ -43,7 +43,7 @@
       </ul>
       <img src="logo.png" alt="Network Partner Logo">
       <br>
-      <a href="..\SAE24\index.html" class="lien">Click here to visit the partner's website</a>
+      <a href="../SAE24/index.html" class="lien">Click here to visit the partner's website</a>
     </section>
     <br>
     <section class="content">
