--- a/portfolio/projet-integratif/index.html
+++ b/portfolio/projet-integratif/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8">
@@ -11,14 +12,17 @@
       padding: 50px;
       background-color: #d0e6f0;
     }
+
     .logo {
       width: 300px;
       margin: 20px;
       transition: transform 0.3s;
     }
+
     .logo:hover {
       transform: scale(1.1);
     }
+
     a {
       display: inline-block;
       margin: 20px;
@@ -32,31 +36,37 @@
       font-size: 20px;
       color: #0f1e76;
     }
-
   </style>
 </head>
+
 <body>
 
   <h1>Bienvenue chez le groupe A</h1>
-  
+
   <div>
-    <a href="/SAE24/index.html">
+    <a href="SAE24/index.html">
       <img src="logo.png" alt="Logo 1" class="logo"><br>
       Cliquez pour aller sur notre entreprise
     </a>
 
-    <a href="/client/index.html">
+    <a href="client/index.html">
       <img src="client.png" alt="Logo 2" class="logo"><br>
       Cliquez pour aller sur notre client
     </a>
   </div>
   <br>
   <br>
+
+    <div style="display: flex; justify-content: center; margin: 40px 0;">
+      <a href="SAE24/infra.html" style="background: #0f1e76; color: #fff; font-size: 2rem; padding: 30px 60px; border-radius: 20px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 16px #0002; transition: background 0.2s;">
+        Accéder directement au projet (POUR LE PORTFOLIO)
+      </a>
+    </div>
   <section id="membres">
     <h2>Membres du groupe</h2>
     <p>Liste masquée pour la publication en ligne.</p>
   </section>
   <br>
 </body>
-</html>
 
+</html>
