--- a/portfolio/projet-integratif/client/client.html
+++ b/portfolio/projet-integratif/client/client.html
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 - Réseaux & CO. Tous droits réservés.</p>
+    <p>&copy; 2025 - EC AUTO. Tous droits réservés.</p>
   </footer>
 
 </body>
