--- a/portfolio/projet-integratif/client/clientan.html
+++ b/portfolio/projet-integratif/client/clientan.html
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 - Réseaux & CO. All rights reserved.</p>
+    <p>&copy; 2025 - EC AUTO. All rights reserved.</p>
   </footer>
 
 </body>
