--- a/portfolio/projet-integratif/client/contact.html
+++ b/portfolio/projet-integratif/client/contact.html
@@ -57,7 +57,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 - Réseaux & CO. Tous droits réservés.</p>
+    <p>&copy; 2025 - EC AUTO. Tous droits réservés.</p>
   </footer>
 
 </body>
