--- a/portfolio/projet-integratif/client/contactan.html
+++ b/portfolio/projet-integratif/client/contactan.html
@@ -55,7 +55,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 - Réseaux & CO. All rights reserved.</p>
+    <p>&copy; 2025 - EC AUTO. All rights reserved.</p>
   </footer>
 
 </body>
